@@ -1,3 +1,7 @@
+2018-08-26  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* list.C: no_selection_type list option.
+
 2018-08-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Multi-column selection lists have optional column borders
